# vkr_prototype

./: README.md  pyproject.toml
artifacts/: experiment_results.json
docs/: empire_deluxe_experiment_scenarios.md  experiment_report.md  validation_test_matrix.md
scripts/: run_experiments.py
src/vkr_knowledge_model/: __init__.py  dsl.py  inference.py  model.py  pipeline.py  semantic.py  translator.py
tests/: test_demo_pipeline.py
tests/fixtures/empire_deluxe/: capture_neutral_city_success.kb  landlocked_city_produces_army_only.kb  transport_load_success.kb
tests/fixtures/inference/: basic_match_success.kb
