[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vkr-knowledge-model"
version = "0.1.0"
description = "Internal knowledge-base object model for conceptual-graph based turn strategy prototypes"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
